--- a/index.html
+++ b/index.html
@@ -1,60 +1,385 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+<head>
 
-    <title>Oyphappybirthday by oyp19931127</title>
-  </head>
+  <meta charset="UTF-8">
 
-  <body>
+  <title>欧阳佩生日快乐-20161127</title>
 
-    <header>
-      <div class="container">
-        <h1>Oyphappybirthday</h1>
-        <h2>oypHappyBirthday</h2>
+  <link rel="stylesheet" href="css/reset.css">
 
-        <section id="downloads">
-          <a href="https://github.com/oyp19931127/oypHappyBirthday/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/oyp19931127/oypHappyBirthday/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/oyp19931127/oypHappyBirthday" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+  <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
+  <script style="javascript">
+	function switchRB(){
+		var rose = document.getElementById('rose');
+		var butterfly = document.getElementById('butterfly');
+		rose.style.display = 'none';
+		butterfly.style.display = 'block';
+	};
+	setTimeout(switchRB,8000);
+	
+</script>
+<style type="text/css">   
+    .linear{   
+        width:100%;   
+        height:600px;   
+        FILTER: progid:DXImageTransform.Microsoft.Gradient(gradientType=0,startColorStr=#b8c4cb,endColorStr=#f6f6f8); /*IE 6 7 8*/   
+        background: -ms-linear-gradient(top, #fff,  #0000ff);        /* IE 10 */  
+        background:-moz-linear-gradient(top,#b8c4cb,#f6f6f8);/*火狐*/   
+        background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#b8c4cb), to(#f6f6f8));/*谷歌*/   
+        background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff), to(#0000ff));      /* Safari 4-5, Chrome 1-9*/  
+        background: -webkit-linear-gradient(top, #fff, #0000ff);   /*Safari5.1 Chrome 10+*/  
+        background: -o-linear-gradient(top, #fff, #0000ff);  /*Opera 11.10+*/  
+    }   
+</style>   
+  
+</head>
+<body class='linear'>
+<audio autoplay="autoplay" src="audio/happyBirthday.mp3" controls="controls">
+Your browser does not support the audio element.
+</audio>
+<div id="rose" style="display:black;margin:10px 30%;">
+	<font size='4'>欧阳佩生日快乐-20161127</font>
+	<canvas id="c" height="500" width="500"></canvas>
+	<script>
+		var b = document.body;
+		var c = document.getElementsByTagName('canvas')[0];
+		var a = c.getContext('2d');
+		document.body.clientWidth; 
+	</script> 
+	<script>
+	// start of submission //
+		with(m = Math) C = cos,
+	S = sin,
+	P = pow,
+	R = random;
+	c.width = c.height = f = 500;
+	h = -250;
+	function p(a, b, c) {
+		if (c > 60) return [S(a * 7) * (13 + 5 / (.2 + P(b * 4, 4))) - S(b) * 50, b * f + 50, 625 + C(a * 7) * (13 + 5 / (.2 + P(b * 4, 4))) + b * 400, a * 1 - b / 2, a];
+		A = a * 2 - 1;
+		B = b * 2 - 1;
+		if (A * A + B * B < 1) {
+			if (c > 37) {
+				n = (j = c & 1) ? 6 : 4;
+				o = .5 / (a + .01) + C(b * 125) * 3 - a * 300;
+				w = b * h;
+				return [o * C(n) + w * S(n) + j * 610 - 390, o * S(n) - w * C(n) + 550 - j * 350, 1180 + C(B + A) * 99 - j * 300, .4 - a * .1 + P(1 - B * B, -h * 6) * .15 - a * b * .4 + C(a + b) / 5 + P(C((o * (a + 1) + (B > 0 ? w: -w)) / 25), 30) * .1 * (1 - B * B), o / 1e3 + .7 - o * w * 3e-6]
+			}
+			if (c > 32) {
+				c = c * 1.16 - .15;
+				o = a * 45 - 20;
+				w = b * b * h;
+				z = o * S(c) + w * C(c) + 620;
+				return [o * C(c) - w * S(c), 28 + C(B * .5) * 99 - b * b * b * 60 - z / 2 - h, z, (b * b * .3 + P((1 - (A * A)), 7) * .15 + .3) * b, b * .7]
+			}
+			o = A * (2 - b) * (80 - c * 2);
+			w = 99 - C(A) * 120 - C(b) * ( - h - c * 4.9) + C(P(1 - b, 7)) * 50 + c * 2;
+			z = o * S(c) + w * C(c) + 700;
+			return [o * C(c) - w * S(c), B * 99 - C(P(b, 7)) * 50 - c / 3 - z / 1.35 + 450, z, (1 - b / 1.2) * .9 + a * .1, P((1 - b), 20) / 4 + .05]
+		}
+	}
+	setInterval('for(i=0;i<1e4;i++)if(s=p(R(),R(),i%46/.74)){z=s[2];x=~~(s[0]*f/z-h);y=~~(s[1]*f/z-h);if(!m[q=y*f+x]|m[q]>z)m[q]=z,a.fillStyle="rgb("+~(s[3]*h)+","+~(s[4]*h)+","+~(s[3]*s[3]*-80)+")",a.fillRect(x,y,1,1)}', 0)// end of submission //
+	</script>
+</div>
+<div id="butterfly" style="display:none">
+  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace" class="svg-defs">
+  <defs>
 
-    <div class="container">
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+    <pattern id='image' width="1" height="1" viewBox="0 0 100 100" preserveAspectRatio="none">
+      <image xlink:href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/78881/pattern_141.gif" width="100" height="100" preserveAspectRatio="none"></image>
+    </pattern>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+    <g id="shape-butterfly-1">
+      <path class="path" fill="" clip-rule="evenodd" d="M8.65,2.85c0.934-0.2,2.15-0.333,3.65-0.4c1.534-0.1,2.667-0.083,3.4,0.05
+		c1.533,0.267,3.45,0.767,5.75,1.5c2.466,0.8,4.35,1.617,5.65,2.45c2.066,1.2,3.883,2.383,5.45,3.55c2.567,2.1,4.35,3.8,5.35,5.1
+		l2.1,2.5c0.933,1.167,1.517,1.983,1.75,2.45c0.333,0.767,1.083,2.117,2.25,4.05c0.233,0.467,0.717,1.683,1.45,3.65
+		c0.733,2.067,1.2,3.45,1.4,4.15c0.467,1.733,0.917,3.767,1.35,6.1l0.4,3.85l-0.25-3.4c-0.6-5.967-1.267-10.25-2-12.85
+		c-0.733-2.434-2.167-5.467-4.3-9.1c-0.966-1.667-1.566-3-1.8-4c-0.233-0.933-0.1-1.267,0.4-1c1.3,0.733,2.917,3.867,4.85,9.4
+		c1.667,4.7,2.85,11.2,3.55,19.5c0.567,6.934,0.667,11.917,0.3,14.95l0.2,0.05c0.231,0,0.348-0.05,0.35-0.15v0.05l0.1,0.05v27.4
+		c-0.032-0.018-0.065-0.035-0.1-0.05v-0.05c-0.7,0.267-0.983,0.117-0.85-0.45c0.067-0.333,0.017-0.817-0.15-1.45
+		c-0.2-0.6-0.316-0.983-0.35-1.15l-0.5-1.65c-0.533-2.967-0.833-5.034-0.9-6.2c-0.1-1.533-0.133-2.4-0.1-2.6
+		c0-0.933,0.167-1.667,0.5-2.2c0.567-0.9,0.684-1.75,0.35-2.55c-0.167-0.367-0.367-0.6-0.6-0.7c-0.333-0.133-0.517,0.283-0.55,1.25
+		c-0.033,1.533-0.167,2.9-0.4,4.1c-0.1,2.3-0.267,3.684-0.5,4.15c-0.333,0.667-1.25,2.95-2.75,6.85c-1.167,2.8-2.233,4.817-3.2,6.05
+		c-0.9,1.2-1.583,2.1-2.05,2.7c-0.8,1-1.434,1.667-1.9,2c-2.067,1.333-3.633,2.067-4.7,2.2c-3.033,0.267-4.95,0.317-5.75,0.15
+		c-0.8-0.167-1.383-0.217-1.75-0.15c-0.533,0.1-1.033,0.45-1.5,1.05c-0.5,0.667-1.217,1.284-2.15,1.85
+		c-0.934,0.567-1.85,0.934-2.75,1.1c-2.467,0.433-4.45,0.25-5.95-0.55c-0.7-0.4-1.467-1.15-2.3-2.25c-0.6-0.867-1.033-1.567-1.3-2.1
+		c-0.267-0.667-0.483-1.483-0.65-2.45c-0.3-1.467-0.383-2.717-0.25-3.75c0.267-1.9,0.45-3.05,0.55-3.45
+		c0.233-1.233,0.566-2.333,1-3.3C9.25,77.45,9.767,76.4,10,76c0.667-1.233,1.55-2.583,2.65-4.05c1.1-1.434,2.184-2.583,3.25-3.45
+		c0.367-0.3,1.15-0.867,2.35-1.7c0.767-0.566,1.917-1.25,3.45-2.05c1.733-0.933,3.267-1.633,4.6-2.1
+		c2.133-0.733,4.534-1.467,7.2-2.2c0.467-0.1,1.517-0.3,3.15-0.6c0.967-0.233,0.4-0.4-1.7-0.5c-2.434-0.1-4.534-0.3-6.3-0.6
+		c-1.566-0.267-3.383-0.7-5.45-1.3c-2.8-0.8-4.467-1.317-5-1.55c-1.567-0.667-3.2-1.75-4.9-3.25c-1.733-1.533-3-3.1-3.8-4.7
+		c-0.533-1.067-0.967-2.434-1.3-4.1c-0.233-1.067-0.3-2.133-0.2-3.2c0.133-0.833,0.183-1.3,0.15-1.4v-0.6
+		c-2.467-3.233-3.983-5.433-4.55-6.6c-0.533-1.033-0.883-1.833-1.05-2.4c-0.3-0.867-0.466-1.85-0.5-2.95
+		c-0.033-2.367,0.034-4.117,0.2-5.25c0.3-1.034,0.483-1.8,0.55-2.3c0.167-0.867,0.034-1.533-0.4-2c-0.6-0.7-1.133-1.517-1.6-2.45
+		c-0.566-1.133-0.833-2.117-0.8-2.95c0.033-1.333,0.167-2.367,0.4-3.1c0.367-1.267,1.05-2.267,2.05-3
+		C4.417,4.25,6.483,3.317,8.65,2.85z"/>
+    <g>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+  </defs>
+</svg>
+<div style="text-align:center;clear:both;position:absolute;top:30px;left:260px;z-index:999">
+<script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
+<script src="/follow.js" type="text/javascript"></script>
+</div>
+<section class="background"></section>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<section class="scene3d">
+<font size='4' style='font-weight:bolder;margin-left:20px'>欧阳佩生日快乐-20161127</font>
+  <div class="cube skybox">
+    <var class="scale">
+    <figure class="face front"></figure>
+    <figure class="face back"></figure>
+    <figure class="face right"></figure>
+    <figure class="face left"></figure>
+    <figure class="face top"></figure>
+    <figure class="face bottom"></figure>
+    </var>
+  </div>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+  <div class="butterfly_container"> 
+    <img src="images/mmexport1479829702024.jpg"; style="width:150px;height:200px";>
+    <var class="rotate3d">
+    <var class="scale">
+    <var class="translate3d">
+    <var class="translate3d-1">
+	<font>欧阳佩</font>
+    <figure class="butterfly">
+      <svg class="wing left" viewBox="0 0 50 100" class="icon shape-codepen">
+        <use class="left" xlink:href="#shape-butterfly-1"></use>
+      </svg> 
+      <svg class="wing right" viewBox="0 0 50 100" class="icon shape-codepen">
+        <use class="left" xlink:href="#shape-butterfly-1"></use>
+      </svg> 
+    </figure>
+    </var>
+    </var>
+    </var>
+    </var>
+  </div>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+  <div class="butterfly_container" 
+       style="margin-top: -150px; margin-left: 140px;
+              -webkit-animation-duration: 5s;
+              -moz-animation-duration: 5s;
+              -ms-animation-duration: 5s;
+              -o-animation-duration: 5s;
+              animation-duration: 5s;">
+			  <img src="images/mmexport1468732250144.jpg"; style="width:150px;height:200px";>
+    <var class="rotate3d">
+    <var class="scale">
+    <var class="translate3d">
+    <var class="translate3d-1">
+	<font>二师兄</font>
+    <figure class="butterfly">
+      <svg class="wing left" viewBox="0 0 50 100"
+           style="-webkit-animation-duration: .75s;
+                  -moz-animation-duration: .75s;
+                  -ms-animation-duration: .75s;
+                  -o-animation-duration: .75s;
+                  animation-duration: .75s;">
+        <use class="left" xlink:href="#shape-butterfly-1"></use>
+      </svg> 
+      <svg class="wing right" viewBox="0 0 50 100"
+           style="-webkit-animation-duration: .75s;
+                  -moz-animation-duration: .75s;
+                  -ms-animation-duration: .75s;
+                  -o-animation-duration: .75s;
+                  animation-duration: .75s;">
+        <use class="left" xlink:href="#shape-butterfly-1"></use>
+      </svg> 
+    </figure>
+    </var>
+    </var>
+    </var>
+    </var>
+  </div>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+  <div class="butterfly_container scale_half" 
+       style="margin-top: -10px; margin-left: 50px;
+              -webkit-animation-duration: 5s;
+              -moz-animation-duration: 5s;
+              -ms-animation-duration: 5s;
+              -o-animation-duration: 5s;
+              animation-duration: 5s;">
+			  <img src="images/mmexport1468732233638.jpg"; style="width:150px;height:200px";>
+    <var class="rotate3d">
+    <var class="scale">
+    <var class="translate3d">
+    <var class="translate3d-1">
+    </var>
+    </var>
+    </var>
+    </var>
+  </div>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+  <div class="butterfly_container scale_half" 
+       style="margin-top: -80px; margin-left: -320px;
+              -webkit-animation-duration: 20s;
+              -moz-animation-duration: 20s;
+              -ms-animation-duration: 20s;
+              -o-animation-duration: 20s;
+              animation-duration: 20s;">
+			  <img src="images/mmexport1468732280084.jpg"; style="width:150px;height:200px";>
+    <var class="rotate3d">
+    <var class="scale">
+    <var class="translate3d">
+    <var class="translate3d-1">
+    </var>
+    </var>
+    </var>
+    </var>
+  </div>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+  <div class="butterfly_container scale_half" 
+       style="margin-top: 80px; margin-left: -250px;
+              -webkit-animation-duration: 20s;
+              -moz-animation-duration: 20s;
+              -ms-animation-duration: 20s;
+              -o-animation-duration: 20s;
+              animation-duration: 20s;">
+			  <img src="images/mmexport1468732314041.jpg"; style="width:150px;height:200px";>
+    <var class="rotate3d">
+    <var class="scale">
+    <var class="translate3d">
+    <var class="translate3d-1">
+    </var>
+    </var>
+    </var>
+    </var>
+  </div>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
+  <div class="butterfly_container scale_third" 
+       style="margin-top: 150px;margin-left: -140px;
+              -webkit-animation-duration: 20s;
+              -moz-animation-duration: 20s;
+              -ms-animation-duration: 20s;
+              -o-animation-duration: 20s;
+              animation-duration: 20s;">
+			  <img src="images/mmexport1468732320939.jpg"; style="width:150px;height:200px";>
+    <var class="rotate3d">
+    <var class="scale">
+    <var class="translate3d">
+    <var class="translate3d-1">
+    </var>
+    </var>
+    </var>
+    </var>
+  </div>
+  
+   <div class="butterfly_container scale_third" 
+       style="margin-top: -150px;margin-left: -190px;
+              -webkit-animation-duration: 20s;
+              -moz-animation-duration: 20s;
+              -ms-animation-duration: 20s;
+              -o-animation-duration: 20s;
+              animation-duration: 20s;">
+			  <img src="images/mmexport1468732338009.jpg"; style="width:150px;height:200px";>
+    <var class="rotate3d">
+    <var class="scale">
+    <var class="translate3d">
+    <var class="translate3d-1">
+    </var>
+    </var>
+    </var>
+    </var>
+  </div>
+  
+  <div class="butterfly_container scale_third" 
+       style="margin-top: -230px;margin-left: -380px;
+              -webkit-animation-duration: 20s;
+              -moz-animation-duration: 20s;
+              -ms-animation-duration: 20s;
+              -o-animation-duration: 20s;
+              animation-duration: 20s;">
+			  <img src="images/mmexport1468732342453.jpg"; style="width:150px;height:200px";>
+    <var class="rotate3d">
+    <var class="scale">
+    <var class="translate3d">
+    <var class="translate3d-1">
+    </var>
+    </var>
+    </var>
+    </var>
+  </div>
 
-    
-  </body>
+  <div class="butterfly_container scale_third" 
+       style="margin-top: -250px; margin-left: 300px; 
+              -webkit-animation-duration: 4s;
+              -moz-animation-duration: 4s;
+              -ms-animation-duration: 4s;
+              -o-animation-duration: 4s;
+              animation-duration: 4s;">
+			  <img src="images/mmexport1468732333873.jpg"; style="width:150px;height:200px";>
+    <var class="rotate3d">
+    <var class="scale">
+    <var class="translate3d">
+    <var class="translate3d-1">
+	
+    </var>
+    </var>
+    </var>
+    </var>
+  </div>
+
+   <div class="butterfly_container scale_third" 
+       style="margin-top: 100px;margin-left: 350px;
+              -webkit-animation-duration: 20s;
+              -moz-animation-duration: 20s;
+              -ms-animation-duration: 20s;
+              -o-animation-duration: 20s;
+              animation-duration: 20s;">
+			  <img src="images/818810707252425832.gif"; style="width:50px;height:100px";>
+    <var class="rotate3d">
+    <var class="scale">
+    <var class="translate3d">
+    <var class="translate3d-1">
+    </var>
+    </var>
+    </var>
+    </var>
+	
+	<div class="butterfly_container scale_third" 
+       style="margin-top: -80px;margin-left: 100px;
+              -webkit-animation-duration: 20s;
+              -moz-animation-duration: 20s;
+              -ms-animation-duration: 20s;
+              -o-animation-duration: 20s;
+              animation-duration: 20s;">
+			  <img src="images/905786475055244096.gif"; style="width:50px;height:100px";>
+    <var class="rotate3d">
+    <var class="scale">
+    <var class="translate3d">
+    <var class="translate3d-1">
+    </var>
+    </var>
+    </var>
+    </var>
+  </div>
+	
+	<div class="butterfly_container scale_third" 
+       style=" position:relative;
+	          margin-top: -450px;margin-left: 50px;
+              -webkit-animation-duration: 20s;
+              -moz-animation-duration: 20s;
+              -ms-animation-duration: 20s;
+              -o-animation-duration: 20s;
+              animation-duration: 20s;">
+			  <img src="images/784189285116937547.gif"; style="width:50px;height:100px";>
+    <var class="rotate3d">
+    <var class="scale">
+    <var class="translate3d">
+    <var class="translate3d-1">
+    </var>
+    </var>
+    </var>
+    </var>
+  </div>
+  
+  
+</section>
+</div>
+</body>
+
 </html>
