--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
   
 </head>
 <body class='linear'>
-<audio autoplay="autoplay" src="audio/happyBirthday.mp3" controls="controls">
+<audio autoplay="autoplay" src="http://sc.111ttt.com/up/mp3/350542/2F24FDA66802174B0628C5CF6ECB2B5B.mp3" loop="loop" controls="controls">
 Your browser does not support the audio element.
 </audio>
+<div style='position:relative; margin-right:30px;margin-bottom:20px;'><font size='2'>&nbsp;Edit by HJH-20161125</font></div>
 <div id="rose" style="display:black;margin:10px 30%;">
 	<font size='4'>欧阳佩生日快乐-20161127</font>
+	
 	<canvas id="c" height="500" width="500"></canvas>
 	<script>
 		var b = document.body;
@@ -127,6 +129,7 @@ Your browser does not support the audio element.
 
 <section class="scene3d">
 <font size='4' style='font-weight:bolder;margin-left:20px'>欧阳佩生日快乐-20161127</font>
+<div style='position:relative; margin-left:20px;margin-bottom:20px;'><font size='2'>Edit by HJH-20161125</font></div>
   <div class="cube skybox">
     <var class="scale">
     <figure class="face front"></figure>
@@ -144,7 +147,6 @@ Your browser does not support the audio element.
     <var class="scale">
     <var class="translate3d">
     <var class="translate3d-1">
-	<font>欧阳佩</font>
     <figure class="butterfly">
       <svg class="wing left" viewBox="0 0 50 100" class="icon shape-codepen">
         <use class="left" xlink:href="#shape-butterfly-1"></use>
@@ -171,7 +173,6 @@ Your browser does not support the audio element.
     <var class="scale">
     <var class="translate3d">
     <var class="translate3d-1">
-	<font>二师兄</font>
     <figure class="butterfly">
       <svg class="wing left" viewBox="0 0 50 100"
            style="-webkit-animation-duration: .75s;
